[tool.poetry]
name = "trip-planner-crew"
version = "0.1.0"
description = "Simple AI Trip Planner"
authors = ["Balaji Ashok Kumar"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
crewai = "0.1.24"
# library that prepares raw documents for downstream ML tasks
unstructured = "==0.10.25"
# library to fetch weather data from open weather map(OWM)
pyowm = "3.3.0"
tools = "^0.1.9"
python-dotenv = "1.0.0"

# Check python code for type errors
[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

# Check for errors & styling issues
[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"